--- a/_posts/2023-04-28-4월28일til.md
+++ b/_posts/2023-04-28-4월28일til.md
@@ -5,13 +5,17 @@ title: "4월28일TIL"
 subtitle: 스프레드 연산자, 구조 분해 할당
 description: 프로퍼티 - 클래스와 객체에 추가되는 변수
 image: https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
-optimized_image:https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
+optimized_image: https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
 category: blog
 tags:
   - blog
+  - TIL
 author: bellyun
 paginate: false
 ---
+
+### 스프레드 연산자
+
 프로퍼티 - 클래스와 객체에 추가되는 변수
 
 메소드 - 클래스와 객체에 추가되는 함수 
@@ -47,7 +51,7 @@ function sortArags(...args){
 
 ---
 
-구조 분해 할당 ( Destructuring)
+### 구조 분해 할당 ( Destructuring)
 
 배열의 원소나 객체의 프로퍼티를 추출해서 변수에 저장 
 
