--- a/_posts/2023-04-28-4월28일til.md
+++ b/_posts/2023-04-28-4월28일til.md
@@ -4,8 +4,10 @@ layout: post
 title: "4월28일TIL"
 subtitle: 스프레드 연산자, 구조 분해 할당
 description: 프로퍼티 - 클래스와 객체에 추가되는 변수
-image: https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
-optimized_image: https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
+image: >-
+     https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
+optimized_image: >-
+     https://velog.velcdn.com/images/whd3558/post/607bc079-cba5-4389-bb65-6866ad499fb5/image.png
 category: blog
 tags:
   - blog
